Fix lint warnings