@@ -1,17 +1,17 @@
-/**
+/*
  * Copyright 2010, 2011, 2012 Guenther Hoelzl, Shawn Brown
- *
+ * <p>
  * This file is part of MINDdroid.
- *
+ * <p>
  * MINDdroid is free software: you can redistribute it and/or modify it under
  * the terms of the GNU General Public License as published by the Free Software
  * Foundation, either version 3 of the License, or (at your option) any later
  * version.
- *
+ * <p>
  * MINDdroid is distributed in the hope that it will be useful, but WITHOUT ANY
  * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
  * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
- *
+ * <p>
  * You should have received a copy of the GNU General Public License along with
  * MINDdroid. If not, see <http://www.gnu.org/licenses/>.
  **/
@@ -19,16 +19,17 @@
 package com.lego.minddroid;
 
 import android.app.Activity;
+import android.app.Dialog;
 import android.bluetooth.BluetoothAdapter;
 import android.content.Context;
 import android.content.Intent;
-import android.content.SharedPreferences;
 import android.content.SharedPreferences.Editor;
 import android.os.Bundle;
 import android.view.Menu;
 import android.view.MenuItem;
 import android.view.View;
 import android.view.Window;
+import android.widget.Button;
 
 public class SplashMenu extends Activity {
 
@@ -40,7 +41,6 @@ public class SplashMenu extends Activity {
     public static final String MINDDROID_ROBOT_TYPE = "MrobotType";
     private int mRobotType;
 
-
     public static void quitApplication() {
         if (MINDdroid.isBtOnByUs() || UniversalUploader.isBtOnByUs()) {
             BluetoothAdapter.getDefaultAdapter().disable();
@@ -48,10 +48,7 @@ public class SplashMenu extends Activity {
             UniversalUploader.setBtOnByUs(false);
         }
         splashMenu.finish();
-
     }
-
-    private View splashMenuView;
 
     private static Activity splashMenu;
 
@@ -60,8 +57,8 @@ public class SplashMenu extends Activity {
         Lama.show(this);
         super.onCreate(savedInstanceState);
         getWindow().requestFeature(Window.FEATURE_NO_TITLE);
-        mRobotType=lookupRobotType();
-        splashMenuView = new SplashMenuView(getApplicationContext(), this);
+        mRobotType = lookupRobotType();
+        View splashMenuView = new SplashMenuView(getApplicationContext(), this);
         setContentView(splashMenuView);
         splashMenu = this;
     }
@@ -111,12 +108,11 @@ public class SplashMenu extends Activity {
                 return true;
             case MENU_UPLOAD:
                 Intent uulIntent = new Intent(this.getBaseContext(), UniversalUploader.class);
-                uulIntent.putExtra("robotType", new Integer(mRobotType));
+                uulIntent.putExtra("robotType", Integer.valueOf(mRobotType));
                 this.startActivity(uulIntent);
                 return true;
             case MENU_ABOUT:
-                About about = new About();
-                about.show(this);
+                showAbout();
                 return true;
             case MENU_QUIT:
                 finish();
@@ -125,18 +121,26 @@ public class SplashMenu extends Activity {
         return false;
     }
 
+    private void showAbout() {
+        Dialog dialog = new Dialog(this);
+        dialog.getWindow().requestFeature(Window.FEATURE_NO_TITLE);
+        dialog.setContentView(R.layout.aboutbox);
+
+        Button buttonOK = dialog.findViewById(R.id.AboutOKbutton);
+        buttonOK.setOnClickListener(v -> dialog.dismiss());
+
+        dialog.show();
+    }
+
     public void setRobotType(int mRobotType) {
-        SharedPreferences mUserPreferences = getSharedPreferences(MINDDROID_PREFS, Context.MODE_PRIVATE);
-        Editor mPrefsEditor = mUserPreferences.edit();
+        Editor mPrefsEditor = getSharedPreferences(MINDDROID_PREFS, Context.MODE_PRIVATE).edit();
         mPrefsEditor.putInt(MINDDROID_ROBOT_TYPE, mRobotType);
-        mPrefsEditor.commit();
+        mPrefsEditor.apply();
         this.mRobotType = mRobotType;
     }
 
     public int lookupRobotType() {
-        SharedPreferences mUserPreferences;
-        mUserPreferences =  getSharedPreferences(MINDDROID_PREFS, Context.MODE_PRIVATE);
-        return mUserPreferences.getInt(MINDDROID_ROBOT_TYPE, R.id.robot_type_shooterbot);
+        return getSharedPreferences(MINDDROID_PREFS, Context.MODE_PRIVATE).getInt(MINDDROID_ROBOT_TYPE, R.id.robot_type_shooterbot);
     }
 
     public int getRobotType() {
